+ rfe #1694104 Allow logging of user status with Apache.
- patch #2649087 None default is different than other None in some languages.
+ [lang] Chinese Simplified update, thanks to Shanyan Baishui - rimyxp 
- patch #2550286 [display] Sort arrows problem, thanks to Virsacer - virsacer
- [security] warn about existence of config directory on main page

3.1.4.0 (not yet released)
+ patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
  thanks to JT Justman - jtjustman
- bug #2491017 [operations] ANSI mode not supported (db rename and table move) 
- bug #2609346 [operations] Fix copying views.
- rfe #2127983 Readd documentation link, it does not protect against anything.
- bug #1675249 [doc] Apache reverse proxy and cookies FAQ
- bug #2682140 UUID() and CURRENT_USER() should not accept arguments
- patch #2682833 [core] Fatal error: Call to a member function isDisplayed(),
  thanks to Christian Rodriguez - judas_iscariote
- patch #2702772 [lang] Duplicate sentence in Polish,
  thanks to Pawel Smolinski - zipoking
- patch #2709040 [doc] Wrong link in ChangeLog formatter,
  thanks to Petr Vorel - pevik

3.1.3.1 (2009-03-24)
- [security] HTTP Response Splitting and file inclusion vulnerabilities 
- [security] XSS vulnerability on export page
- [security] Insufficient output sanitizing when generating configuration file

3.1.3.0 (2009-02-28)
+ [lang] Turkish update, thanks to Burak Yavuz
- patch #2496403 [display] Multi-row change with "]",
  thanks to Virsacer - virsacer
- bug #2027720 [parser] Missing space after BINARY used as cast 
- patch #2520747 [core] E_DEPRECATED compatibility for PHP 5.3,
  thanks to Giovanni Giacobbi - themnemonic
- bug [display] Message "Bookmark created" is not displaying
+ [display] Show AUTO_INCREMENT instead of A_I when in vertical mode
- patch #2538358 [display] Conditions for relational display field, 
  thanks to Virsacer - virsacer
+ [lang] Mongolian update, thanks to Bayarsaikhan Enkhtaivan - bayaraa