@@ -140,7 +140,7 @@ $strCompression = 'Typ kompresji';
 $strCompressionWillBeDetected = 'Rodzaj kompresji importowanych plików zostanie automatycznie rozpoznany jako jeden z: %s';
 $strConfigDefaultFileError = 'Nie udało się załadować domyślnej konfiguracji z pliku: "%1$s"';
 $strConfigFileError = 'phpMyAdmin nie zdołał odczytać Twojego pliku konfiguracji!<br />Może się to zdarzyć, jeśli PHP znajdzie w nim błąd składniowy lub nie może znaleźć tego pliku.<br />Proszę wywołać bezpośrednio plik konfiguracyjny używając poniższego linku i odczytać otrzymane komunikat(y) o błędach. W większości przypadków brakuje gdzieś cudzysłowu lub średnika.<br />Jeżeli otrzymasz pustą stronę, wszystko jest w porządku.';
-$strConfigureTableCoord = 'Proszę skonfigurować współrzędnie dla tabeli %s';
+$strConfigureTableCoord = 'Proszę skonfigurować współrzędne dla tabeli %s';
 $strConnectionError = 'Nie udało się nawiązać połączenia: błędne ustawienia.';
 $strConnections = 'Połączenia';
 $strConstraintsForDumped = 'Ograniczenia dla zrzutów tabel';
@@ -200,7 +200,7 @@ $strDelayedInserts = 'Użyj opóźnionych dodań';
 $strDeleteAndFlushDescr = 'Jest to najzgrabniejszy sposób, ale przeładowanie uprawnień może potrwać jakiś czas.';
 $strDeleteAndFlush = 'Usuń użytkowników, a następnie przeładuj uprawnienia.';
 $strDeleted = 'Rekord został skasowany';
-$strDeleteNoUsersSelected = 'Żaden użytkownik ze został zaznaczony do skasowania!';
+$strDeleteNoUsersSelected = 'Żaden użytkownik ze został zaznaczony do usunięcia!';
 $strDelete = 'Usuń';
 $strDeleting = 'Usuwanie %s';
 $strDelimiter = 'Separator';
@@ -359,7 +359,7 @@ $strInvalidTableName = 'Niewłaściwa nazwa tabeli';
 $strJapanese = 'Japoński';
 $strJoins = 'Złączenia';
 $strJumpToDB = 'Skok do bazy danych &quot;%s&quot;.';
-$strJustDeleteDescr = 'Nim uprawnienia zostaną przeładowane, &quot;usunięci&quot; użytkownicy nadal będą mieli dotychczasowy dostęp do serwera.';
+$strJustDeleteDescr = 'Do momentu przeładowania uprawnień &quot;usunięci&quot; użytkownicy nadal będą mieli dostęp do serwera.';
 $strJustDelete = 'Po prostu usuń użytkowników z tabeli uprawnień.';
 
 $strKeepPass = 'Nie zmieniaj hasła';
@@ -397,7 +397,7 @@ $strLogout = 'Wyjście';
 $strLogPassword = 'Hasło:';
 $strLogServer = 'Serwer';
 $strLogUsername = 'Użytkownik:';
-$strLongOperation = 'Ta operacja może trwać długo. Czy mimo to kontynuować?';
+$strLongOperation = 'Ta operacja może długo potrwać. Czy mimo to kontynuować?';
 
 $strMaxConnects = 'Maks. jednoczesnych połączeń';
 $strMaximalQueryLength = 'Maksymalna długość utworzonego zapytania';
@@ -555,7 +555,7 @@ $strPrivDescReplSlave = 'Potrzebne dla replikacji serwera podrzędnego.';
 $strPrivDescSelect = 'Pozwól czytać dane.';
 $strPrivDescShowDb = 'Daj dostęp do pełnej listy baz danych.';
 $strPrivDescShowView = 'Pozwól wykonywać zapytania SHOW CREATE VIEW.';
-$strPrivDescShutdown = 'Pozwól zamknąć serwer.';
+$strPrivDescShutdown = 'Pozwól wyłączyć serwer.';
 $strPrivDescSuper = 'Pozwól na połączenie, nawet jeśli osiągnięta została maksymalna ilość połączeń; Wymagane dla większość operacji administracyjnych, takich jak ustawianie zmiennych globalnych czy unicestwianie wątków innych użytkowników.';
 $strPrivDescUpdate = 'Pozwól zmieniać dane.';
 $strPrivDescUsage = 'Brak uprawnień.';
@@ -670,7 +670,7 @@ $strShowPHPInfo = 'Informacje o PHP';
 $strShow = 'Pokaż';
 $strShowSlaveHosts = 'Pokaż podrzędne hosty';
 $strShowSlaveStatus = 'Status serwera podrzędnego';
-$strShowStatusBinlog_cache_disk_useDescr = 'Liczba transakcji, które używały pamięci podręcznej tymczasowego dziennika binarnego, ale który przekroczyły wartość binlog_cache_size i do zapisania instrukcji transakcji został użyty plik tymczasowy.';
+$strShowStatusBinlog_cache_disk_useDescr = 'Liczba transakcji, które używały pamięci podręcznej tymczasowego dziennika binarnego, które przekroczyły wartość binlog_cache_size i do zapisania instrukcji transakcji został użyty plik tymczasowy.';
 $strShowStatusBinlog_cache_useDescr = 'Liczba transakcji, które używały pamięci podręcznej tymczasowego dziennika binarnego.';
 $strShowStatusCreated_tmp_disk_tablesDescr = 'Liczba tabel tymczasowych na dysku utworzonych automatycznie przez serwer podczas wykonywanie instrukcji. Przy dużej wartości Created_tmp_disk_tables, zwiększenie wartości tmp_table_size spowoduje tworzenie tymczasowych tabel w pamięci, a nie na dysku.';
 $strShowStatusCreated_tmp_filesDescr = 'Ile plików tymczasowych utworzył mysqld.';
@@ -768,7 +768,7 @@ $strShowStatusSlave_runningDescr = 'ON oznacza, że ten serwer jest podrzędny i
 $strShowStatusSlow_launch_threadsDescr = 'Liczba wątków, których utworzenie trwało dłużej niż slow_launch_time sekund.';
 $strShowStatusSlow_queriesDescr = 'Liczba zapytań, których wykonanie zajęło więcej niż long_query_time sekund.';
 $strShowStatusSort_merge_passesDescr = 'Liczba przebiegów scalania, które musiał wykonać algorytm sortujący. Przy dużej wartości, warto wziąć pod uwagę zwiększenie wartości zmiennej systemowej sort_buffer_size.';
-$strShowStatusSort_rangeDescr = 'Liczba sortować wykonanych przy użyciu zakresów.';
+$strShowStatusSort_rangeDescr = 'Liczba sortowań wykonanych przy użyciu zakresów.';
 $strShowStatusSort_rowsDescr = 'Liczba posortowanych rekordów.';
 $strShowStatusSort_scanDescr = 'Liczba sortowań wykonanych poprzez przeszukiwanie tabeli.';
 $strShowStatusTable_locks_immediateDescr = 'Ile razy blokada tabeli została uzyskana natychmiastowo.';
@@ -867,7 +867,7 @@ $strTransformation_application_octetstream__hex = 'Wyświetla szesnastkową repr
 $strTransformation_image_jpeg__inline = 'Wyświetla klikalną miniaturkę; opcje: szerokość,wysokość w pikselach (oryginalne proporcje zostaną zachowane)';
 $strTransformation_image_jpeg__link = 'Wyświetla link do tego obrazu (bezpośrednie ściągnięcie bloba).';
 $strTransformation_image_png__inline = 'Zobacz image/jpeg: inline';
-$strTransformation_text_plain__external = 'TYLKO LINUX: Uruchamia zewnętrzną aplikację i przekazuje dane pól na standardowe wejście. Zwraca standardowe wyjście tej aplikacji. Domyślnie jest to Tidy, którzy porządkuje kod HTML. Ze względu na bezpieczeństwo, należy ręcznie zmodyfikować plik libraries/transformations/text_plain__external.inc.php i dodać narzędzie, na którego uruchamianie pozwalasz. Pierwszą opcją jest liczba programów, których chcesz użyć, a drugą są parametry programu. Jeżeli trzeci parametr jest ustawiony na 1, zostanie dokonana konwersja wyjścia poprzez użycie htmlspecialchars() (Domyślną wartością jest 1). Jeżeli czwarty parametr został ustawiony na 1, zawartość komórki nie będzie zawijana, tak że całe wyjście zostanie pokazane bez zmian formatu (domyślną wartością jest 1)';
+$strTransformation_text_plain__external = 'TYLKO LINUX: Uruchamia zewnętrzną aplikację i przekazuje dane pól na standardowe wejście. Zwraca standardowe wyjście tej aplikacji. Domyślnie jest to Tidy, który porządkuje kod HTML. Ze względu na bezpieczeństwo, należy ręcznie zmodyfikować plik libraries/transformations/text_plain__external.inc.php i dodać narzędzie, na którego uruchamianie pozwalasz. Pierwszą opcją jest liczba programów, których chcesz użyć, a drugą są parametry programu. Jeżeli trzeci parametr jest ustawiony na 1 (jest to domyślna wartość), zostanie dokonana konwersja wyjścia poprzez użycie htmlspecialchars(). Jeżeli czwarty parametr został ustawiony na 1 (jest to domyślna wartość), zawartość komórki nie będzie zawijana, tak że całe wyjście zostanie pokazane bez zmian formatu.';
 $strTransformation_text_plain__formatted = 'Zachowuje oryginalne formatowanie pola. Neutralizowanie znaków niespecjalnych nie jest dokonywane.';
 $strTransformation_text_plain__imagelink = 'Wyświetla obrazek i link, pole zawiera nazwę pliku; pierwszą opcję jest prefiks, taki jak "http://domena.com/", drugą opcją jest szerokość w pikselach, trzecią opcją jest wysokość.';
 $strTransformation_text_plain__link = 'Wyświetla link, pole zawiera nazwę pliku; pierwsza opcja to prefiks, taki jak "http://domena.com/", druga opcja to tytuł linku.';
@@ -879,7 +879,7 @@ $strType = 'Typ';
 
 $strUkrainian = 'Ukraiński';
 $strUncheckAll = 'Odznacz wszystkie';
-$strUnicode = 'Unikod';
+$strUnicode = 'Unicode';
 $strUnique = 'Jednoznaczny';
 $strUnknown = 'nieznany';
 $strUnselectAll = 'Odznacz wszystkie';
@@ -991,12 +991,12 @@ $strFieldInsertFromFileTempDirNotExists = 'Błąd podczas przesuwania wrzuconego
 $strViewName = 'Nazwa perspektywy';
 $strOptions = 'Opcje';
 $strFiles = 'Pliki';
-$strMysqlLibDiffersServerVersion = 'Wersja %s biblioteki MySQL dla PHP różni się od wersji %s serwera MySQL. Może to powodować nieprzewidywale zachowanie.';
+$strMysqlLibDiffersServerVersion = 'Wersja %s biblioteki MySQL dla PHP różni się od wersji %s serwera MySQL. Może to powodować nieprzewidywalne zachowanie.';
 $strRoutines = 'Procedury i funkcje';
 $strRoutineReturnType = 'Zwracany typ';
 $strControluserFailed = 'Połączenie dla użytkownika kontrolnego zdefiniowanego w pliku konfiguracyjnym nie powiodło się.';
-$strHexForBLOB = 'Use hexadecimal for BLOB';  //to translate
-$strRestartInsertion = 'Restart insertion with %s rows';  //to translate
+$strHexForBLOB = 'Użyj liczb szesnastkowych dla typu BLOB';
+$strRestartInsertion = 'Odśwież wstawianie z %s rekordami';
 $strTriggers = 'Wyzwalacze';
 $strEvent = 'Zdarzenie';
 $strProfiling = 'Profilowanie';
@@ -1136,18 +1136,18 @@ $strSetupVersionCheckNone = 'Nowsza stabilna wersja nie jest dostępna';
 $strSetupServerSecurityInfoMsg = 'Jeżeli wydaje się to konieczne, można użyć dodatkowych ustawień bezpieczeństwa — [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server_config]uwierzytelniania na podstawie hosta[/a] i [a@?page=form&amp;formset=features#tab_Security]listy zaufanych serwerów proxy[/a]. Jednakże ochrona oparta na adresy IP może nie być wiarygodna, jeżeli używany IP należy do ISP, do którego podłączonych jest tysiące użytkowników.';
 $strSetupServerSslMsg = 'Jeżeli połączenia SSL są obsługiwane przez serwer WWW, powinny być używane.';
 $strSetupServerExtensionMsg = 'Z powodów wydajnościowych powinien być uzywany mysqli.';
-$strSetupServerAuthConfigMsg = 'You set [kbd]config[/kbd] authentication type and included username and password for auto-login, which is not a desirable option for live hosts. Anyone who knows phpMyAdmin URL can directly access your phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http[/kbd].';  //to translate
+$strSetupServerAuthConfigMsg = 'Został ustawiony typ autoryzacji [kbd]config[/kbd] z automatycznym logowaniem. Ustawienie to nie jest zalecane dla serwerów produkcyjnych, ponieważ do uzyskania dostępu do phpMyAdmina potrzebna jest znajomość tylko jego adresu URL. Zmień [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]typ autoryzacji[/a] na [kbd]cookie[/kbd] lub [kbd]http[/kbd].';
 $strSetupBlowfishSecretMsg = 'Klucz blowfish ne był ustawiony, natomiast włączone było uwierzytelnianie przez ciasteczka, więc klucz został wygenerowany. Jest on używany do szyfrowania ciasteczek.';
 $strSetupBlowfishSecretLengthMsg = 'Klucz jest za krótki, powinien mieć co najmniej 8 znaków.';
 $strSetupBlowfishSecretCharsMsg = 'Klucz powinien zawierać znaki alfanumeryczne [em]i[/em] i specjalne.';
 $strSetupForceSSLMsg = 'Ta [a@?page=form&amp;formset=features#tab_Security]opcja[/a] powinna być włączona, jeśli serwer WWW ją obsługuje.';
 $strSetupAllowArbitraryServerMsg = 'Ta [a@?page=form&amp;formset=features#tab_Security]opcja[/a] powinna być wyłączona, ponieważ pozwala atakującemu metodą brute force zalogować się na dowolny serwer MySQL. Jeżeli wydaje się ona konieczna, należy użyć [a@?page=form&amp;formset=features#tab_Security]listy zaufanych serwerów proxy[/a]. Jednakże ochrona oparta na adresy IP może nie być wiarygodna, jeżeli używany IP należy do ISP, do którego podłączonych jest tysiące użytkowników.';
 $strSetupLoginCookieValidityMsg = '[a@?page=form&formset=features#tab_Security]Ważność ciasteczka logowania[/a] powinna wynosić co najwyżej 1800 sekund (30 minut). Większe wartości mogą stwarzać zagrożenie bezpieczeństwa, takie jak możliwość podszycia się.';
-$strSetupDirectoryNotice = 'This value should be double checked to ensure that this directory is neither world accessible nor readable or writable by other users on your server.';  //to translate
-$strSetupGZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export]GZip compression and decompression[/a] requires functions (%s) which are unavailable on this system.';  //to translate
-$strSetupBZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Bzip2 compression and decompression[/a] requires functions (%s) which are unavailable on this system.';  //to translate
-$strSetupZipDumpImportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Zip decompression[/a] requires functions (%s) which are unavailable on this system.';  //to translate
-$strSetupZipDumpExportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Zip compression[/a] requires functions (%s) which are unavailable on this system.';  //to translate
+$strSetupDirectoryNotice = 'Wartość ta powinna być dwukrotnie sprawdzona aby mieć pewność iż ten katalog jest zabezpieczony przed jakimkolwiek dostępem.';
+$strSetupGZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export](De)kompresja gzip[/a] wymaga funkcji (%s) która nie jest dostępna w tym systemie.';
+$strSetupBZipDumpWarning = '[a@?page=form&amp;formset=features#tab_Import_export](De)kompresja bzip2[/a] wymaga funkcji (%s) która nie jest dostępna w tym systemie.';
+$strSetupZipDumpImportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Dekompresja zip[/a] wymaga funkcji (%s) która nie jest dostępna w tym systemie.';
+$strSetupZipDumpExportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Kompresja zip[/a] wymaga funkcji (%s) która nie jest dostępna w tym systemie.';
 $strSetuperror_form = 'Wysłany formularz zawiera błędy';
 $strSetuperror_missing_field_data = 'Brakuje danych dla %s';
 $strSetuperror_incorrect_port = 'Nieprawdiłowy numer portu';
@@ -1160,56 +1160,56 @@ $strSetuperror_empty_pmadb_password = 'Empty phpMyAdmin control user password wh
 $strSetuperror_empty_user_for_config_auth = 'Empty username while using config authentication method';  //to translate
 $strSetuperror_empty_signon_session = 'Empty signon session name while using signon authentication method';  //to translate
 $strSetuperror_empty_signon_url = 'Empty signon URL while using signon authentication method';  //to translate
-$strSetuperror_connection = 'Could not connect to MySQL server';  //to translate
+$strSetuperror_connection = 'Nie można połączyć się z serwerem MySQL';
 $strSetupForm_Server = 'Ustawienia podstawowe';
-$strSetupForm_Server_desc = 'Enter server connection parameters';  //to translate
+$strSetupForm_Server_desc = 'Podaj parametry dla połączenia z serwerem';
 $strSetupForm_Server_login_options = 'Signon login options';  //to translate
 $strSetupForm_Server_login_options_desc = 'Enter login options for signon authentication';  //to translate
-$strSetupForm_Server_config = 'Server configuration';  //to translate
-$strSetupForm_Server_config_desc = 'Advanced server configuration, do not change these options unless you know what they are for';  //to translate
-$strSetupForm_Server_pmadb = 'PMA database';  //to translate
+$strSetupForm_Server_config = 'Konfiguracja serwera';
+$strSetupForm_Server_config_desc = 'Zaawansowane ustawienia serwera; nie zmieniaj ich jeżeli nie jesteś pewien ich znaczenia';
+$strSetupForm_Server_pmadb = 'Baza danych PMA';
 $strSetupForm_Server_pmadb_desc = 'Configure phpMyAdmin database to gain access to additional features, see [a@../Documentation.html#linked-tables]linked-tables infrastructure[/a] in documentation';  //to translate
-$strSetupForm_Import_export = 'Import / export';  //to translate
+$strSetupForm_Import_export = 'Import / eksport';
 $strSetupForm_Import_export_desc = 'Set import and export directories and compression options';  //to translate
 $strSetupForm_Security = 'Bezpieczeństwo';
 $strSetupForm_Security_desc = 'Please note that phpMyAdmin is just a user interface and its features do not limit MySQL';  //to translate
-$strSetupForm_Sql_queries = 'SQL queries';  //to translate
+$strSetupForm_Sql_queries = 'Zapytania SQL';
 $strSetupForm_Sql_queries_desc = 'SQL queries settings, for SQL Query box options see [a@?page=form&amp;formset=main_frame#tab_Sql_box]Navigation frame[/a] settings';  //to translate
-$strSetupForm_Other_core_settings = 'Other core settings';  //to translate
+$strSetupForm_Other_core_settings = 'Inne kluczowe ustawienia';
 $strSetupForm_Other_core_settings_desc = 'Settings that didn\'t fit enywhere else';  //to translate
-$strSetupForm_Left_frame = 'Navigation frame';  //to translate
+$strSetupForm_Left_frame = 'Ramka nawigacji'; 
 $strSetupForm_Left_frame_desc = 'Customize appearance of the navigation frame';  //to translate
-$strSetupForm_Left_servers = 'Sewery';
+$strSetupForm_Left_servers = 'Serwery';
 $strSetupForm_Left_servers_desc = 'Servers display options';  //to translate
 $strSetupForm_Left_databases = 'Bazy danych';
 $strSetupForm_Left_databases_desc = 'Databases display options';  //to translate
 $strSetupForm_Left_tables = 'Tabele';
 $strSetupForm_Left_tables_desc = 'Tables display options';  //to translate
-$strSetupForm_Main_frame = 'Main frame';  //to translate
-$strSetupForm_Startup = 'Startup';  //to translate
-$strSetupForm_Startup_desc = 'Customize startup page';  //to translate
-$strSetupForm_Browse = 'Browse mode';  //to translate
-$strSetupForm_Browse_desc = 'Customize browse mode';  //to translate
-$strSetupForm_Edit = 'Edit mode';  //to translate
-$strSetupForm_Edit_desc = 'Customize edit mode';  //to translate
-$strSetupForm_Tabs = 'Tabs';  //to translate
-$strSetupForm_Tabs_desc = 'Choose how you want tabs to work';  //to translate
-$strSetupForm_Sql_box = 'SQL Query box';  //to translate
+$strSetupForm_Main_frame = 'Główna ramka';
+$strSetupForm_Startup = 'Strona startowa';
+$strSetupForm_Startup_desc = 'Personalizuj stronę startową';
+$strSetupForm_Browse = 'Tryb przeglądania';
+$strSetupForm_Browse_desc = 'Personalizuj tryb przeglądania';
+$strSetupForm_Edit = 'Tryb edycji';
+$strSetupForm_Edit_desc = 'Personalizuj tryb edycji';
+$strSetupForm_Tabs = 'Zakładki';
+$strSetupForm_Tabs_desc = 'Wybierz sposób działania zakładek';
+$strSetupForm_Sql_box = 'Okno zapytania SQL';
 $strSetupForm_Sql_box_desc = 'Customize links shown in SQL Query boxes';  //to translate
-$strSetupForm_Import_defaults = 'Import defaults';  //to translate
+$strSetupForm_Import_defaults = 'Domyślne opcje importu';
 $strSetupForm_Import_defaults_desc = 'Customize default common import options';  //to translate
-$strSetupForm_Export_defaults = 'Export defaults';  //to translate
+$strSetupForm_Export_defaults = 'Domyślne opcje eksportu';
 $strSetupForm_Export_defaults_desc = 'Customize default export options';  //to translate
-$strSetupForm_Query_window = 'Query window';  //to translate
+$strSetupForm_Query_window = 'Okno zapytania';
 $strSetupForm_Query_window_desc = 'Customize query window options';  //to translate
 $strSetupServers_verbose_name = 'Verbose name of this server';  //to translate
 $strSetupServers_host_name = 'Nazwa hosta serwera';
 $strSetupServers_port_name = 'Port serwera';
 $strSetupServers_port_desc = 'Port na którym nasłuchuje serwer MySQL, pole puste oznacza wartość domyślną';
-$strSetupServers_socket_name = 'Gniazdo serwer';
+$strSetupServers_socket_name = 'Gniazdo serwera';
 $strSetupServers_socket_desc = 'Gniazdko, na którym nasłuchuje serwer MySQL, pole puste oznacza wartość domyślną';
 $strSetupServers_ssl_name = 'Używaj SSL';
-$strSetupServers_ssl_desc = '';  //to translate
+$strSetupServers_ssl_desc = '';
 $strSetupServers_connect_type_name = 'Typ połączenia';
 $strSetupServers_connect_type_desc = 'Sposób połączenia z serwerem; w razie niepewności, należy pozostawić tcp';
 $strSetupServers_extension_name = 'Rozszerzenie PHP';
@@ -1277,7 +1277,7 @@ $strSetupDefaultCharset_name = 'Domyślne kodowanie napisów';
 $strSetupDefaultCharset_desc = 'Domyślne kodowanie napisów używane przy konwersjach';
 $strSetupRecodingEngine_name = 'Mechanizm konwersji kodowania napisów';
 $strSetupRecodingEngine_desc = 'Które funckje będą użyte do konwersji kodowania napisów';
-$strSetupIconvExtraParams_name = 'Dodatkowe parametry dla iconva';
+$strSetupIconvExtraParams_name = 'Dodatkowe parametry dla iconv';
 $strSetupZipDump_name = 'ZIP';
 $strSetupZipDump_desc = 'Włącza format kompresji [a@http://en.wikipedia.org/wiki/ZIP_(file_format)]ZIP[/a] dla operacji importu i eksportu';
 $strSetupGZipDump_name = 'GZip';
@@ -1362,7 +1362,7 @@ $strSetupLeftFrameTableLevel_name = 'Maximum table tree depth';  //to translate
 $strSetupShowTooltip_name = 'Display table comments in tooltips';  //to translate
 $strSetupShowTooltipAliasTB_name = 'Display table comment instead of its name';  //to translate
 $strSetupShowTooltipAliasTB_desc = 'When setting this to [kbd]nested[/kbd], the alias of the table name is only used to split/nest the tables according to the $cfg[\'LeftFrameTableSeparator\'] directive, so only the folder is called like the alias, the table name itself stays unchanged';  //to translate
-$strSetupShowStats_name = 'Show statistics';  //to translate
+$strSetupShowStats_name = 'Pokaż statystyki';
 $strSetupShowStats_desc = 'Allow to display database and table statistics (eg. space usage)';  //to translate
 $strSetupShowPhpInfo_name = 'Show phpinfo() link';  //to translate
 $strSetupShowPhpInfo_desc = 'Shows link to [a@http://php.net/manual/function.phpinfo.php]phpinfo()[/a] output';  //to translate
@@ -1423,11 +1423,11 @@ $strSetupImport_allow_interrupt_name = 'Partial import: allow interrupt';  //to 
 $strSetupImport_allow_interrupt_desc = 'Allow interrupt of import in case script detects it is close to time limit. This might be good way to import large files, however it can break transactions.';  //to translate
 $strSetupImport_skip_queries_name = 'Partial import: skip queries';  //to translate
 $strSetupImport_skip_queries_desc = 'Number of records (queries) to skip from start';  //to translate
-$strSetupExport_format_name = 'Format';  //to translate
-$strSetupExport_compression_name = 'Compression';  //to translate
-$strSetupExport_asfile_name = 'Save as file';  //to translate
+$strSetupExport_format_name = 'Format';
+$strSetupExport_compression_name = 'Kompresja';
+$strSetupExport_asfile_name = 'Zapisz jako plik';
 $strSetupExport_charset_name = 'Kodowanie pliku';
-$strSetupExport_onserver_name = 'Save on server';  //to translate
+$strSetupExport_onserver_name = 'Zapisz na serwerze';
 $strSetupExport_onserver_overwrite_name = 'Overwrite existing file(s)';  //to translate
 $strSetupExport_remember_file_template_name = 'Remember file name template';  //to translate
 $strSetupExport_file_template_table_name = 'Table name template';  //to translate
@@ -1440,11 +1440,11 @@ $strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&qu
 $strShowBinaryContents = 'Show binary contents';  //to translate
 $strShowBLOBContents = 'Show BLOB contents';  //to translate
 $strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
+$strLoginWithoutPassword = 'Konfiguracja zabrania logowania bez hasła (zobacz AllowNoPassword)';
 $strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
+$strSetupServers_AllowNoPassword_name = 'Pozwól na logowanie bez hasła';
 $strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
+$strGetMoreThemes = 'Pobierz więcej motywów!';
 $strNoneDefault = 'None';  //to translate
 $strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
 ?>
