@@ -45,6 +45,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [lang] Chinese Simplified update, thanks to Shanyan Baishui - rimyxp 
 - patch #2550286 [display] Sort arrows problem, thanks to Virsacer - virsacer
 - [security] warn about existence of config directory on main page
++ patch #2706761 [lang] Polish update,
+  thanks to Pawel Smolinski - zipoking
 
 3.1.4.0 (not yet released)
 + patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
